cppcheck.log
src/models/robot.h:22:5: error: There is an unknown macro here somewhere. Configuration is required. If Q_PROPERTY is a macro then please configure it. [unknownMacro]
    Q_PROPERTY(float kickspeedx READ getKickspeedx)
    ^
src/networks/receiver.h:37:9: error: There is an unknown macro here somewhere. Configuration is required. If slots is a macro then please configure it. [unknownMacro]
private slots:
        ^
src/networks/sender.cpp:6:29: performance: Function parameter 'address' should be passed by const reference. [passedByValue]
Sender::Sender(const string address, quint16 port, QObject *parent) :
                            ^
src/utils/motionControl.cpp:48:15: style: The scope of the variable 'newV' can be reduced. [variableScope]
        float newV = bv + a * deltaTime * 2.0f;
              ^
